@@ -44,7 +44,7 @@
 		#include "PDITarget.h"
 
 	/* Preprocessor Checks: */
-		#if BOARD == BOARD_XPLAIN
+		#if (BOARD == BOARD_XPLAIN) || (BOARD == BOARD_XPLAIN_REV1)
 			#undef  ENABLE_ISP_PROTOCOL
 			
 			#if !defined(ENABLE_PDI_PROTOCOL)
